--- a/1.Intro.ipynb
+++ b/1.Intro.ipynb
@@ -96,7 +96,7 @@
    },
    "source": [
     "url 변수로 등록되어 있는 주소로 웹페이지 요청을 서버로 요청하였고 이에 대한 회신을 받았습니다.<br>\n",
-    "이제부터는 이런 html을 분석하여 우리가 원하는 정보(text)만 추출하는 파싱(parsing) 작업에 대해서 공부하고, 최종적으로 이 모든것을 자동적으로 하는 <b>봇</b>을 만들어 봅시다.\n",
+    "이제부터는 이런 html을 분석하여 우리가 원하는 정보(text)만 추출하는 파싱(parsing) 작업에 대해서 공부하고, 최종적으로 이 모든것을 자동으로 하는 <b>봇</b>을 만들어 봅시다.\n",
     "\n",
     "### 수고하셨습니다!"
    ]
