--- a/1.Intro-question_hint.ipynb
+++ b/1.Intro-question_hint.ipynb
@@ -100,7 +100,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 35 Tensorflow",
    "language": "python",
    "name": "python3"
   },
@@ -114,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
